--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+    //mysql
+    runtimeOnly("com.mysql:mysql-connector-j")
 }
 
 tasks.named('test') {
