--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-#spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
